--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,7 @@
 nome.notNull = O nome não pode ser nulo.
 login.notNull = O login não pode ser nulo.
 senha.notNull = A senha não pode ser nula.
+categoria.notNull = A categoria não pode ser nula.
 
 nome.size = O nome deve ter entre {min} e {max} caracteres.
 login.size = O login deve ter entre {min} e {max} caracteres.
